--- a/BreakoutGame/BreakoutGame/Properties/Resources.resx
+++ b/BreakoutGame/BreakoutGame/Properties/Resources.resx
@@ -130,4 +130,34 @@
   <data name="redBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\redBrick.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brokenGreenBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brokenGreenBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brokenYellowBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brokenYellowBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="greenBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\greenBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redBrick2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\redBrick2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="yellowBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\yellowBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brokenDarkGreenBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brokenDarkGreenBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brokenPurpleBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brokenPurpleBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brokenRedBrick2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brokenRedBrick2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="darkGreenBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkGreenBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="purpleBrick" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\purpleBrick.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
