--- a/BreakoutGame/BreakoutGame/Properties/Resources.resx
+++ b/BreakoutGame/BreakoutGame/Properties/Resources.resx
@@ -178,4 +178,16 @@
   <data name="slow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\slow.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="brick_shot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\brick_shot.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="broken" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\broken.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="explosion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\explosion.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="newball1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\newball.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
