--- a/BreakoutGame/BreakoutGame/Properties/Resources.resx
+++ b/BreakoutGame/BreakoutGame/Properties/Resources.resx
@@ -190,4 +190,7 @@
   <data name="newball1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\newball.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="highScore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\highScore.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
